# appliedsec

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
_bmad-output/: ai-workflow-status.yaml
atlas_detection/: __init__.py  models.py  rules.py  runner.py
batch_scheduler/: __init__.py  client.py  embedding_migration.py  fp_generator.py  models.py  processor.py  scheduler.py
context_gateway/: __init__.py  anthropic_client.py  api.py  evidence_builder.py  gateway.py  injection_classifier.py  injection_detector.py  output_validator.py  pii_redactor.py  prompt_adapter.py  prompt_builder.py  spend_guard.py  summarizer.py
ctem_normaliser/: __init__.py  art.py  base.py  garak.py  models.py  service.py  snyk.py  upsert.py  wiz.py
docs/: ai-system-design.md  api-contracts.md  architecture-reference.md  architecture.md  atlas-integration.md  audit-architecture.md  ctem-integration.md  data-models.md  data-pipeline.md  development-guide.md  index.md  inference-optimization.md  prd.md  project-overview.md  project-scan-report.json  provider-outage-playbook.md  rag-design.md  remediation-backlog.md  research-notes.md  runbook.md  source-tree-analysis.md  testing-requirements.md
elastic_adapter/: __init__.py  adapter.py  connector.py
entity_parser/: __init__.py  parser.py  service.py  validation.py
llm_router/: __init__.py  api.py  circuit_breaker.py  concurrency.py  escalation.py  metrics.py  models.py  router.py
ops/: __init__.py  alerting_rules.yml  alerts.py  health.py  metrics.py
orchestrator/: __init__.py  canary.py  drift_detection.py  executor_constraints.py  fp_canary.py  fp_evaluation.py  fp_governance.py  fp_shortcircuit.py  graph.py  kill_switch.py  persistence.py  service.py  shadow_mode.py
sentinel_adapter/: __init__.py  adapter.py  connector.py
shared/: __init__.py
shared/auth/: mtls.py  (+3 more)
(+419 files in other folders)
