[project]
name = "aluskort"
version = "0.1.0"
description = "Cloud-Neutral Security Reasoning Control Plane"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "qdrant-client>=1.8.0",
    "neo4j>=5.17.0",
    "PyJWT[crypto]>=2.8.0",
    "confluent-kafka>=2.3.0",
    "pyyaml>=6.0",
    "anthropic>=0.39.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "infra*", "entity_parser*", "sentinel_adapter*", "elastic_adapter*", "splunk_adapter*", "context_gateway*", "llm_router*", "orchestrator*", "ctem_normaliser*", "atlas_detection*", "batch_scheduler*", "ops*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
